--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,31 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // retrofit lib
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // GSON lib
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // OKHTTP lib
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    // glide lib
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
